--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>JobFinder</title>
+		<title>Xsport Consulting</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -17,17 +17,18 @@
 					<div class="nav-container">
 						<img id="logo" src="img/logo.png" alt="JobFinder">
 						<ul>
-							<li><a href="#">Menu</a></li>
-							<li><a href="#">Buscar</a></li>
+							<li><a href="#">HOME</a></li>
+							<li><a href="#">QUEM SOMOS</a></li>
+							<li><a href="#">PROGRAMAS</a></li>
+							<li><a href="#">BLOG</a></li>
+							<li><a href="#">FAQ</a></li>
+							<li><a href="#">FOR COACHES</a></li>
+							<li><a href="#">CONTATO</a></li>
 						</ul>
+						<img src="data:image/svg+xml;utf8,%3Csvg width='21' height='15' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3ClinearGradient x1='50%' y1='0%' x2='50%' y2='100%' id='a'%3E%3Cstop stop-color='%23FFF' offset='0%'/%3E%3Cstop stop-color='%23F0F0F0' offset='100%'/%3E%3C/linearGradient%3E%3ClinearGradient x1='50%' y1='0%' x2='50%' y2='100%' id='b'%3E%3Cstop stop-color='%2305AB41' offset='0%'/%3E%3Cstop stop-color='%23019C39' offset='100%'/%3E%3C/linearGradient%3E%3ClinearGradient x1='50%' y1='0%' x2='50%' y2='100%' id='d'%3E%3Cstop stop-color='%23053087' offset='0%'/%3E%3Cstop stop-color='%23012877' offset='100%'/%3E%3C/linearGradient%3E%3Ccircle id='c' cx='3.5' cy='3.5' r='3.5'/%3E%3C/defs%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath fill='url(%23a)' d='M0 0h21v15H0z'/%3E%3Cpath fill='url(%23b)' d='M0 0h21v15H0z'/%3E%3Cpath d='M2.422 7.773c-.233-.15-.228-.398 0-.546l7.656-4.954a.85.85 0 01.844 0l7.656 4.954c.233.15.228.398 0 .546l-7.656 4.954a.85.85 0 01-.844 0L2.422 7.773z' fill='%23FDD216'/%3E%3Cg transform='translate(7 4)'%3E%3Cmask id='e' fill='%23fff'%3E%3Cuse xlink:href='%23c'/%3E%3C/mask%3E%3Cuse fill='url(%23d)' xlink:href='%23c'/%3E%3Cpath d='M-.1 2.974c.265-.215 1.463-.04 3.534.512 1.474.394 3.173 1.262 3.562 1.742l.314.388.778-.629-.315-.388c-.55-.68-2.421-1.636-4.081-2.079-2.586-.69-3.758-.86-4.422-.323l-.388.314.629.777.389-.314z' fill='%23FFF' fill-rule='nonzero' mask='url(%23e)'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E" alt="Português">
+						<img src="data:image/svg+xml;utf8,%3Csvg width='21' height='15' xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3ClinearGradient x1='50%' y1='0%' x2='50%' y2='100%' id='a'%3E%3Cstop stop-color='%23FFF' offset='0%'/%3E%3Cstop stop-color='%23F0F0F0' offset='100%'/%3E%3C/linearGradient%3E%3ClinearGradient x1='50%' y1='0%' x2='50%' y2='100%' id='b'%3E%3Cstop stop-color='%23D02F44' offset='0%'/%3E%3Cstop stop-color='%23B12537' offset='100%'/%3E%3C/linearGradient%3E%3ClinearGradient x1='50%' y1='0%' x2='50%' y2='100%' id='c'%3E%3Cstop stop-color='%2346467F' offset='0%'/%3E%3Cstop stop-color='%233C3C6D' offset='100%'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath fill='url(%23a)' d='M0 0h21v15H0z'/%3E%3Cpath d='M0 0h21v1H0V0zm0 2h21v1H0V2zm0 2h21v1H0V4zm0 2h21v1H0V6zm0 2h21v1H0V8zm0 2h21v1H0v-1zm0 2h21v1H0v-1zm0 2h21v1H0v-1z' fill='url(%23b)'/%3E%3Cpath fill='url(%23c)' d='M0 0h9v7H0z'/%3E%3Cpath d='M1.5 2a.5.5 0 110-1 .5.5 0 010 1zm2 0a.5.5 0 110-1 .5.5 0 010 1zm2 0a.5.5 0 110-1 .5.5 0 010 1zm2 0a.5.5 0 110-1 .5.5 0 010 1zm-5 1a.5.5 0 110-1 .5.5 0 010 1zm2 0a.5.5 0 110-1 .5.5 0 010 1zm2 0a.5.5 0 110-1 .5.5 0 010 1zm1 1a.5.5 0 110-1 .5.5 0 010 1zm-2 0a.5.5 0 110-1 .5.5 0 010 1zm-2 0a.5.5 0 110-1 .5.5 0 010 1zm-2 0a.5.5 0 110-1 .5.5 0 010 1zm1 1a.5.5 0 110-1 .5.5 0 010 1zm2 0a.5.5 0 110-1 .5.5 0 010 1zm2 0a.5.5 0 110-1 .5.5 0 010 1zm1 1a.5.5 0 110-1 .5.5 0 010 1zm-2 0a.5.5 0 110-1 .5.5 0 010 1zm-2 0a.5.5 0 110-1 .5.5 0 010 1zm-2 0a.5.5 0 110-1 .5.5 0 010 1z' fill='url(%23a)'/%3E%3C/g%3E%3C/svg%3E" alt="English">
 					</div>
 				</nav>
-					<div class="cabe2" id="cabe2" data-clarity-mask="true"><nova-barra-globocom tenant-id="g1"></nova-barra-globocom>
-<ul>
-	<li><a href="#">Menu</a></li>
-</ul>
-					</div>
-						</nav>
 				<div id="main-banner">
 					<div id="search-form">
 						<h1>A maneira mais fácil de encontrar seu novo emprego</h1>
@@ -35,7 +36,17 @@
 						<form>
 							<input type="text" name="job" placeholder="Digite o cargo">
 							<select name="region">
-								<option value="">Todos os estados</option>
+								<option value="">Todos os estad
+</div>
+<div class="job-type">
+	<spamclass="clt">CLT</spam>
+</div>
+</a>
+	</main>
+	</body>
+	<!-- <script src="https://kit.fontawesome.com/595d04b7d2.js" crossorigin="anonymous"></script> -->
+</html>
+os</option>
 							</select>
 							<select name="category">
 								<option value="">Categoria</option>
@@ -47,94 +58,3 @@
 			</header>
 		</div>
 		<main id="lastjobs-container"class="wrape">
-			<h1> Ultimas vagas enviadas </h1>
-			  <ul>
-					<li>
-						<a href="#"class="clickarea">
-					</li>
-				</ul>
-	<div class="company-box">
-		<img src="img/googlelogo.png">
-		<div class="company-info">
-			<h3> developer </h3>
-			<p> google </p>
-		</div>
-	</div>
-<div class="locality">
-	<i class="fasfa-map-market-alt"></i>
-	<p> mountain view, california </p>
-</div>
-<div class="job-type">
-	<spamclass="clt">CLT</spam>
-</div>
-</a>
-	</main>
-    <main id="lastjobs-container"class="wrape">
-			  <ul>
-					<li>
-						<a href="#"class="clickarea">
-					</li>
-				</ul>
-	<div class="company-box">
-		<img src="img/ibmlogo.png">
-		<div class="company-info">
-			<h3> DBA </h3>
-			<p> IBM </p>
-		</div>
-	</div>
-<div class="locality">
-	<i class="fasfa-map-market-alt"></i>
-	<p> Endicott, Nova York </p>
-</div>
-<div class="job-type">
-	<spamclass="clt">CLT</spam>
-</div>
-</a>
-	</main>
-	<main id="lastjobs-container"class="wrape">
-			  <ul>
-					<li>
-						<a href="#"class="clickarea">
-					</li>
-				</ul>
-	<div class="company-box">
-		<img src="img/linkedinlogo.png">
-		<div class="company-info">
-			<h3> Front and Developer </h3>
-			<p> Linkedin </p>
-		</div>
-	</div>
-<div class="locality">
-	<i class="fasfa-map-market-alt"></i>
-	<p> Sunnyvale, Califórnia </p>
-</div>
-<div class="job-type">
-	<spamclass="clt">CLT</spam>
-</div>
-</a>
-	</main>
-	<main id="lastjobs-container"class="wrape">
-			  <ul>
-					<li>
-						<a href="#"class="clickarea">
-					</li>
-				</ul>
-	<div class="company-box">
-		<img src="img/facebooklogo.png">
-		<div class="company-info">
-			<h3> Full Stack Developer </h3>
-			<p> Facebook </p>
-		</div>
-	</div>
-<div class="locality">
-	<i class="fasfa-map-market-alt"></i>
-	<p> Menlo Park, Califórnia </p>
-</div>
-<div class="job-type">
-	<spamclass="clt">CLT</spam>
-</div>
-</a>
-	</main>
-	</body>
-	<!-- <script src="https://kit.fontawesome.com/595d04b7d2.js" crossorigin="anonymous"></script> -->
-</html>
