--- a/index.html
+++ b/index.html
@@ -31,30 +31,11 @@
 				</nav>
 				<div id="main-banner">
 					<div id="search-form">
-						<h1>A maneira mais fácil de encontrar seu novo emprego</h1>
-						<p>Conecte-se de forma gratuita as melhores empresas e consiga o emprego dos seus sonhos.</p>
-						<form>
-							<input type="text" name="job" placeholder="Digite o cargo">
-							<select name="region">
-								<option value="">Todos os estad
-</div>
-<div class="job-type">
-	<spamclass="clt">CLT</spam>
-</div>
-</a>
-	</main>
-	</body>
-	<!-- <script src="https://kit.fontawesome.com/595d04b7d2.js" crossorigin="anonymous"></script> -->
-</html>
-os</option>
-							</select>
-							<select name="category">
-								<option value="">Categoria</option>
-							</select>
-							<input type="submit" value="Pesquisar">
-						</form>
-					</div>
-				</div>
-			</header>
+						<h1>Want to play college sports?</h1>
+						<p>Change your life through a sporting scholarship at America's top universities. We are here to help talented young men and women from across the world be all that they can be.</p>
 		</div>
+		<div id=vermeio>
+		</div>
+
 		<main id="lastjobs-container"class="wrape">
+			</html>
